# mmbots

./: .gitignore  CMakeLists.txt  README.md
Executables/: CMakeLists.txt  coffeebot.cpp  mmoptions.h  phonebot.cpp  responderbot.cpp  sushibot.cpp
Python/: .gitignore  README.md  cceslash.py  cerino.py  crawl.sh  eid.py  hindex-table-scholar.py  hindex-table.py  hindex.py  hindexslash.py  mattermostrequest.py  memeslash.py  persdic.py  requirements.txt
jenkins/: cppcheck.sh
